﻿POKE

* v1.1.0.0 (2014/02/16)

fixes: 
- two tests were failing due to silly tests against private member counts to
  validate success;
  
enhancements:
- now support invoking methods with out/ref parameters (poewrshell treats both as [ref])

* v1.0.0.2 (2014/05/07)

fixes:
- readonly fields are now settable
- added test for readonly fields to test-poke.ps1

* v1.0 (2012/04/26)

fixes:
- removed unintentional dependencies on .NET 4.5 
- added value-from-pipeline support for peek (new-objectproxy)

known issues:
- get-member output for property with differing get/set visibility does not show modifier



